# wordclock

./: .gitignore  BOM.xlsx  LICENSE  README.MD
docs/: index.md
firmware/: Cargo.toml  README.md  avr-atmega328p.json  ocd.sh  openocd.gdb
firmware/.cargo/: config.toml
firmware/src/: clock.rs  main.rs  modes.rs  setup.rs  state.rs  times.rs
firmware/src/config/: am.rs  default.rs  mod.rs
graphics/layouts/: en_US.1.txt  scratch.txt
schematics/: schematics.ioc
schematics/WordClockV1/: 14120x14120.PcbDoc  LED_Driver_and_LEDs_03.SchDoc  MainBoard.PcbDoc  NonRGB-v1.PcbDoc  PowerSystem.SchDoc  Schlib1.SchLib  WordClockLedBoard.PrjPcb  rv1.NonRGBPCB.PcbDoc
schematics/WordClockV2/: LEDArray.SchDoc  Master.SchDoc  Power.SchDoc  Signal.SchDoc  WordClockV2.PrjPcb  WordClockV2.PrjPcbStructure
schematics/circuit/wordclock-0.0.1/: led_array.kicad_sch  wordclock.kicad_pcb  wordclock.kicad_pro  wordclock.kicad_sch
schematics/circuit/wordclock-0.1/: #auto_saved_files#  led_array.kicad_sch  wordclock.csv  wordclock.kicad_pcb  wordclock.kicad_prl  wordclock.kicad_sch  wordclock.xml
schematics/circuit/wordclock-proto-r1/: led_array.kicad_sch  wordclock-proto-r1.kicad_pcb  wordclock-proto-r1.kicad_pro  wordclock-proto-r1.kicad_sch
schematics/circuit/wordclock-r1/: led_array.kicad_sch  wordclock.kicad_pcb  wordclock.kicad_pro  wordclock.kicad_sch
schematics/enclosure/: wordclock.FCStd
schematics/wordclock/: led_array.kicad_sch  wordclock.kicad_pcb  wordclock.kicad_prl  wordclock.kicad_pro  wordclock.kicad_sch
src/WordClockV1/: 14.22x14.22.PcbDoc  14x14.PcbDoc  LED_Driver_and_LEDs_01.SchDoc  LED_Driver_and_LEDs_02.SchDoc  LED_Driver_and_LEDs_04.SchDoc  MainBoard.CMP  MainBoard.PcbLib  MasterSheet.SchDoc  Schematics.SchDoc  WordClockLedBoard.PrjPcbStructure
