[package]
authors = [
    "Evan Parizot <evan@parizot.info>"
]
edition = "2018"
name = "wordclock"
version = "0.1.0"

[dependencies]
lib = {path = "library"}
volatile = "0.4.3"

[target.thumbv7em-none-eabihf]
runner = "gdb-multiarch -q -x openocd.gdb"
rustflags = [
    "-C", "link-arg=-Tlink.x",
]

[build]
target = "thumbv7em-none-eabihf"

[[bin]]
name = "wordclock"
test = false
bench = false