[package]
authors = [
    "Evan Parizot <evan@parizot.info>"
]
edition = "2018"
name = "wordclock"
version = "0.1.0"

[target.thumbv7em-none-eabihf]
runner = "gdb-multiarch -q -x openocd.gdb"
rustflags = [
    "-C", "link-arg=-Tlink.x",
]

[build]
target = "thumbv7em-none-eabihf"

[[bin]]
name = "wordclock"
test = false
bench = false

[dependencies]
volatile = "0.4.3"
alloc-cortex-m = "0.4.4"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
cortex-m-rtic-macros = "1.1.6"
cortex-m-semihosting = "0.5.0"
switch-hal = "0.4.0"
panic-semihosting = "0.6.0"
max7219 = "0.3.1"
ds323x = "0.5.0"
hal = { package = "stm32f3xx-hal", version = "0.9.2", features = ["ld", "rt", "stm32f303xc"]}